add person find endpoint
